vuexのモジュール導入

--- a/client/components/TestComponent.html
+++ b/client/components/TestComponent.html
@@ -1,4 +1,5 @@
 <div>
   <v-btn color="primary" dark @click="inc">up</v-btn>
+  <v-progress-circular v-if="isBusy" indeterminate color="primary"></v-progress-circular>
   <p>カウント {{ count }}</p>
 </div>
